k8s/pacs/pacs-deployment.yml

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pacs-deployment
  namespace: deepmd-pacs
spec:
  selector:
    matchLabels:
      app: pacs
  replicas: 1
  template:
    metadata:
      labels:
        app: pacs
    spec:
      volumes:
      - name: deepmd-storage-input
        hostPath:
          path: /home/ubuntu/storage1/deepmd/orthanc/db
          type: DirectoryOrCreate
      containers:
        - name: pacs
          image: anilyerramasu/pacs-tools:latest
          ports:
            - containerPort: 4000
              name: pacs-port
            
          volumeMounts:
            - name: deepmd-storage-input
              mountPath: /var/lib/orthanc/db
      
---
apiVersion: v1
kind: Service
metadata:
  name: pacs-service
  namespace: deepmd
spec:
  selector:
    app: orthanc
  ports:
    - port: 4000
      targetPort: 4000
